# DL4H-Reproduce-KeyClass

./: .gitignore  README.md  datasets_visualizations.ipynb  experiment_summary.csv  experiment_summary.ipynb  main.py  pyproject.toml
.github/workflows/: make_public_scheduled.yml
config_files/: config_agnews.yml  config_agnews_original.yml  config_amazon.yml  config_amazon_original.yml  config_dbpedia.yml  config_dbpedia_original.yml  config_imdb.yml  config_imdb_original.yml  config_mimic.yml  config_mimic_2.yml  config_mimic_filtered_descriptions.yml  config_mimic_unfiltered_descriptions.yml  default_config.yml
keyclass/: models.py  train_classifier.py  utils.py
keyclass_multilabel/: models.py  train_classifier.py  utils.py
mimic_preprocessing/: 00_generate_icd9_descriptors.py  01_create_admission_note_table.R  02_generate_mimic_train_test_files.py  03_icd9_mimic_assigment_analysis.py  check_files.ipynb  createAdmissionNoteTable.R  createAdmissionNoteTable.py  generateFinalFiles.py  mimic_data_visualization.ipynb  target_icd9_descriptors.txt  target_icd9_descriptors_filtered.txt
mimic_preprocessing/descriptors/: CMS32_DESC_LONG_DX.csv  get_icd9_class_descriptors.py  output.txt
scripts/: dropbox_upload.py  dropbox_upload2.py  encode_datasets.py  encode_datasets_multilabel.py  get_data.py  label_data.py  label_data_multilabel.py  run_all.py  run_all_multilabel.py  run_experiments.py  run_experiments_1.py  run_experiments_2.py  run_experiments_3.py  run_experiments_multilabel.py  train_downstream_model.py  train_downstream_model_multilabel.py
(+2 files in other folders)
